--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "bootstrap": "^5.3.3",
     "i18next": "^24.2.3",
     "next": "^15.2.4",
     "next-i18next": "^15.4.2",
@@ -17,6 +18,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
