feat: add authentication system and database schemas

--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.13.0",
+    "@neondatabase/serverless": "^1.0.0",
     "@reduxjs/toolkit": "^2.6.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "i18next": "^24.2.3",
     "next": "^15.2.4",
     "next-i18next": "^15.4.2",
@@ -25,6 +29,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.6",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
