--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.13.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@neondatabase/serverless": "^1.0.0",
     "@reduxjs/toolkit": "^2.6.1",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "i18next": "^24.2.3",
+    "nanoid": "^5.1.5",
     "next": "^15.2.4",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.0.2",
