--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@neondatabase/serverless": "^1.0.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
@@ -24,10 +25,12 @@
     "next-i18next": "^15.4.2",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "svix": "^1.63.1"
   },
   "devDependencies": {
     "@types/node": "^20",
