--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "i18next": "^24.2.3",
     "nanoid": "^5.1.5",
     "next": "^15.2.4",
+    "next-cloudinary": "^6.16.0",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
@@ -30,7 +33,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
-    "svix": "^1.63.1"
+    "svix": "^1.63.1",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
