--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@neondatabase/serverless": "^1.0.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
